# hifi-liquidator

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  deployment.yaml  hifi-liquidator.yaml  rustfmt.toml
cache/config/: mainnet.json  rinkeby.json
liquidator/: Cargo.toml
liquidator-bindings/: Cargo.toml  build.rs
liquidator-bindings/abis/: BalanceSheet.json  Fintroller.json  FyToken.json
liquidator-bindings/src/: balancesheet.rs  fintroller.rs  fytoken.rs  lib.rs  uniswapv2pair.rs
liquidator-structs/: Cargo.toml
liquidator-structs/src/: config.rs  keeper.rs  lib.rs  opts.rs
liquidator/src/: escalator.rs  lib.rs  liquidations.rs  liquidator.rs  main.rs  sentinel.rs  sentry  vault.rs  vaults.rs
