[package]
name = "hifi-liquidator-bindings"
version = "1.0.0"
authors = ["Paul Razvan Berg <hello@paulrberg.com>"]
edition = "2018"

[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"], rev = "fc4b3e4ce49f67a9d0f8155902a4e750411e1174" }

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "fc4b3e4ce49f67a9d0f8155902a4e750411e1174" }
serde_json = "1.0"