[package]
name = "hifi-liquidator-bindings"
version = "1.0.0"
authors = ["Paul Razvan Berg <hello@paulrberg.com>"]
edition = "2018"

[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"], tag = "0.2.0" }

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", tag = "0.2.0" }
serde_json = "1.0"