[package]
name = "hifi-liquidator"
version = "1.0.0"
authors = ["Paul Razvan Berg <hello@paulrberg.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
ethers = { git = "https://github.com/gakonst/ethers-rs", tag = "0.2.0" }
gumdrop = "0.8"
hifi-liquidator-bindings = { path = "../liquidator-bindings", version = "1.0" }
hifi-liquidator-structs = { path = "../liquidator-structs", version = "1.0" }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
